styles.css
@font-face {
  font-family: "pixel";
  src: url("fonts/silkscreen.ttf");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "luci";
  src: url("fonts/lucidaconsole.ttf");
  font-weight: normal;
  font-style: normal;
}

@media only screen and (max-width: 768px) {
  .popupfamily {
    width: 60%; /* Adjust width for smaller screens */
  }
  .familypicture {
    width: 350px !important;
  }
  .conwin {
    width: 300px !important;
  }

  .console {
    display: none !important;
  }

  #canvas {
    width: 300px !important;
  }

  .updates {
    width: 370px !important;
  }

  body {
    font-size: 12px !important;
    font-family: luci !important;
  }

  .post img{
    width: 100% !important;
  }
  .feed-window{
    width: 93% !important;
  }
}

::-webkit-scrollbar {
  display: none;
}

body {
  background: url("pics/wallpaper/mainb.png") no-repeat center center fixed;
  background-size: cover;
  margin: 0;
  padding: 0;

  font-family: Arial, sans-serif;
  font-family: luci;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
}

.close-button-ui-basic {
  font-size: normal;
  position: absolute;
  right: 1px;
  height: 12px !important;
  max-height: 12px; 
  min-height: 12px; 
  line-height: 12px;
  text-align: center;
  cursor: pointer;
  color: #000;
  border-top: 1px solid #fff;
  border-left: 1px solid #fff;
  border-right: 1px solid gray;
  border-bottom: 1px solid gray;
  box-shadow: inset 1px 1px #dfdfdf, 1px 0 #000, 0 1px #000, 1px 1px #000;
  background-color: silver;
}

.ui-style {
  color: #000;
  border-top: 1px solid #fff;
  border-left: 1px solid #fff;
  border-right: 1px solid gray;
  border-bottom: 1px solid gray;
  box-shadow: inset 1px 1px #dfdfdf, 1px 0 #000, 0 1px #000, 1px 1px #000;
  background-color: silver;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

.main-site {
  display: none;
}

#loading-animation {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: url("pics/wallpaper/pitchb.png") no-repeat center center fixed;
  background-size: cover;
  margin: 0;
  padding: 0;
  justify-content: center;
  align-items: center;
  text-align: center;
}

#fadeinout {
  display: none;
}

#LogoLoad {
  width: 300px;
}

.loading-slider {
  color: white;
}

body.loaded #loading-animation {
  display: none;
  background-image: url("pics/wallpaper/sunako.png");
}

.desktop {
  position: absolute;
  top: 30px;
  left: 30px;
  overflow: hidden !important;
}

.noteswindow {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #000;
  width: 200px;
  z-index: 999;
  text-align: left;
}

.container {
  margin-left: 5px;
  display: flex;
  align-items: center;
}

#telelogo {
  width: 30px;
  margin-left: 5px; /* Adjust margin as needed */
}

.dragZ{ /* for future updates */
  z-index: 9999;
} 


.updates {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #ffffff;
  border-top: 1px solid #fff;
  border-left: 1px solid #fff;
  border-right: 1px solid gray;
  border-bottom: 1px solid gray;
  box-shadow: inset 1px 1px #dfdfdf, 1px 0 #000, 0 1px #000, 1px 1px #000;
  background-color: rgb(65, 65, 65);
  width: 450px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  z-index: 999;
  text-align: center;
}

.glowbehind {
  /* box-shadow: 0 0 10px pink !important; */

  -webkit-box-shadow: 0px 0px 62px 11px rgba(255, 137, 246, 0.31) !important;
  -moz-box-shadow: 0px 0px 62px 11px rgba(255, 137, 246, 0.31) !important;
  box-shadow: 0px 0px 62px 11px rgba(255, 137, 246, 0.31) !important;
}

.soonlist {
  text-align: left;
  margin-left: 5px;
}

button {
  font-family: pixel;
  color: #000;
  border-top: 1px solid #fff;
  border-left: 1px solid #fff;
  border-right: 1px solid gray;
  border-bottom: 1px solid gray;
  box-shadow: inset 1px 1px #dfdfdf, 1px 0 #000, 0 1px #000, 1px 1px #000;
  background-color: silver;
  cursor: pointer;
}

button:active {
  box-shadow: inset -1.5px -1.5px 0 0 #fcfcfc, inset 1.5px 1.5px 0 0 #263238,
    inset -3px -3px 0 0 #cac6cb, inset 3px 3px 0 0 #a099a1;
}

.tablinks:active{
  box-shadow: inset -1.5px -1.5px 0 0 #fcfcfc, inset 1.5px 1.5px 0 0 #263238,
  inset -3px -3px 0 0 #cac6cb, inset 3px 3px 0 0 #a099a1;
}


.icon {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: move;
  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 3));
  cursor: pointer;
  margin: 10px;
  color: white;
}

.icon img {
  display: block;
  width: 50px; /* Set the width of the image to 50px */
  height: auto; /* Maintain aspect ratio */
}

.popup-text {
  margin-bottom: 20px;
}

#rpopup {
  position: fixed;
  width: 250px;
  height: 100px;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: 1px solid #ccc;
  z-index: 9999;
}

#tpopup {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: white;
  border: 1px solid #ccc;
  z-index: 9999;
}

.popup-content {
  text-align: center;
}

.board {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 5px;
}

.cell {
  width: 100px;
  height: 100px;
  background-color: #000;
  color: #fff;
  font-size: 2em;
  display: flex;
  justify-content: center;
  align-items: center;
}

.taskbar {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 38px;
  background: #c0c0c0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 199999999999999; /* Ensure .taskbar is below #start-window */
  overflow: hidden;
  -webkit-box-shadow: 0px -6px 7px 0px rgba(34, 60, 80, 0.24);
  -moz-box-shadow: 0px -6px 7px 0px rgba(34, 60, 80, 0.24);
  box-shadow: 0px -6px 7px 0px rgba(34, 60, 80, 0.24);
  border-top: 2px solid #efefef;
}
/* ... */

